Add link css to head

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="application-name" content="Thanos Resume">
-    <title>Thanos — Résumé</title>
+		<title>Thanos — Résumé</title>
+		
+		<!-- favicon -->
+		<link href="img/favicon.ico" rel=icon>
+		
+		<!-- web-fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet">
+		
+		<!-- font-awesome -->
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+		
+		<!-- Bootstrap -->
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+		
+		<!-- Style CSS -->
+		<link href="css/style.css" rel="stylesheet">
   </head>
   <body>
   
