Add a fake contact information into the <head>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="application-name" content="Thanos Resume">
-		<title>Thanos — Résumé</title>
+    <title>Thanos — Résumé</title>
+    
+    <!-- Provides information about an author or another person -->
+   <link rel="me" href="https://google.com/profiles/thenextweb" type="text/html">
+   <link rel="me" href="mailto:name@example.com">
+   <link rel="me" href="sms:+15035550125">
 		
 		<!-- favicon -->
 		<link href="img/favicon.ico" rel=icon>
